--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,13 @@
 title: 桜小路4ak5ra # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  百转千回，为与君随<br/>
-  只要让她更加闪亮<br/>
-  成为月亮后面的影子也没关系<br/>
-  <a href="mailto:i@wu-kan.cn">
-    <i class="fa-solid fa-envelope"></i>
-  </a>
-  <a href="https://github.com/4ak5ra">
-    <i class="fa-brands fa-github"></i>
-  </a>
-  <a href="https://vjudge.net/user/WuK">
-    <i class="fa-solid fa-smile"></i>
-  </a>
+  百转千回<br/>
+  为与君随<br/>
+  大道至简<br/>
+
   <a href="https://space.bilibili.com/321802444">
     <i class="fa-brands fa-bilibili"></i>
   </a>
-  <a href="">
-    <i class="fa-brands fa-zhihu"></i>
-  </a>
+
   <br/>
 url: https://4ak5ra.github.io # 你的域名，例如 https://wu-kan.github.io
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
