--- a/_config.yml
+++ b/_config.yml
@@ -234,7 +234,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               - | # 觉得我的主题好用的话，让更多的人知道它吧！
                 <div>
                   <i class="fa-solid fa-thumbs-up fa-fw"></i>
-                  <a href="https://jekyll-theme-WuK.wu-kan.cn">
+                  <a href="https://github.com/4ak5ra/4ak5ra.github.io">
                     jekyll-theme-WuK
                   </a>
                 </div>
@@ -573,7 +573,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                       "night": "for(let i=7; i<16; ++i) if(document.body.classList.contains(`theme-base-0`+i.toString(16))) { document.body.classList.remove(`theme-base-0`+i.toString(16)); document.body.classList.add(`theme-base-0`+((i-6)%9+7).toString(16)); break; }",
                       "content": {
                         "link": ["https:\/\/jekyll-theme-WuK.wu-kan.cn"],
-                        "skin": ["要换其她的人吗", "我会去休息的","她们也很高兴见到你"],
+                        "skin": ["要换其她的人吗", "她们也很高兴见到你","我会去休息的"],
                         "hidden": true,
                         "custom": [{
                           "selector": "a",
