--- a/_config.yml
+++ b/_config.yml
@@ -572,7 +572,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                       "hidden": true,
                       "night": "for(let i=7; i<16; ++i) if(document.body.classList.contains(`theme-base-0`+i.toString(16))) { document.body.classList.remove(`theme-base-0`+i.toString(16)); document.body.classList.add(`theme-base-0`+((i-6)%9+7).toString(16)); break; }",
                       "content": {
-                        "link": ["https:\/\/jekyll-theme-WuK.wu-kan.cn"],
+                        "link": ["https://4ak5ra.github.io/"],#看板娘的链接
                         "skin": ["要换其她的人吗", "她们也很高兴见到你","我会去休息的"],
                         "hidden": true,
                         "custom": [{
