--- a/_config.yml
+++ b/_config.yml
@@ -234,8 +234,8 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               - | # 觉得我的主题好用的话，让更多的人知道它吧！
                 <div>
                   <i class="fa-solid fa-thumbs-up fa-fw"></i>
-                  <a href="https://github.com/4ak5ra/4ak5ra.github.io">
-                    jekyll-theme-WuK
+                  <a href="https://github.com/wu-kan/wu-kan.github.io/tree/gh-pages">
+                    source
                   </a>
                 </div>
               - | # Copyright声明
