--- a/_config.yml
+++ b/_config.yml
@@ -203,7 +203,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                     document.getElementById("run_time_hour"),
                     document.getElementById("run_time_minute"),
                     document.getElementById("run_time_second"),
-                    "23/12/2024 13:03:56")// 这是我第一篇CSDN博客的时间
+                    "23/12/2024 13:03:56")
                   </script>
                 </div>
               - | # 不蒜子页面统计，看不懂可不改
@@ -659,7 +659,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             - key: data-separator-vertical # 垂直展示页分隔符
               value: <!-- .slide vertical=true -->
             - key: data-background-color
-              value: "White"
+              value: "Black"
           prepend: |
             <link
               rel="stylesheet"
