--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 title: 桜小路4ak5ra # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  樱与月<br/>
-  幻想与逻辑<br/>
-  大道至简<br/>
-
+  愿你<br/>
+  下一次流泪<br/>
+  是喜极而泣<br/>
+  愿你<br/>
+  每一天<br/>
+  都绚烂如樱<br/>
   <a href="https://space.bilibili.com/321802444">
     <i class="fa-brands fa-bilibili"></i>
   </a>
