--- a/_config.yml
+++ b/_config.yml
@@ -375,7 +375,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               </style>
         page:
           title: # 为每个页面自动生成一个 H1 title
-            enable: true
+            enable: false
           prepend:
             - | # 标题和引用前插一个图标
               <style>
